--- a/index.html
+++ b/index.html
@@ -23,5 +23,8 @@
       </section>
     </main>
     <script src="main.bundle.js"></script>
+    <script
+      src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'>
+    </script>
   </body>
 </html>
